<resources>
    <string name="app_name">Health</string>
    <string name="action_settings">Settings</string>
    <string name="connection">Connection</string>
    <string name="catch_start">Catch Start</string>
    <string name="catch_end">Catch End</string>
    <string name="service_stop">Service Stop</string>
    <string name="no_devices">No Devices</string>
    <string name="google_play_services">Google Play Services</string>
    <string name="connected">Connected</string>
    <string name="disconnected">DisConnected</string>
    <string name="suspend">Suspended</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="delete_file">Clean Data</string>
    <string name="get_data">Get Data</string>
    <string name="mode_interval">Interval</string>
    <string name="mode_continuous">Continuous</string>
    <string name="mode_run">Run Mode</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This Phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- network exception-->
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>

    <string name="title_activity_home">Home</string>
</resources>
